--- a/04-大数据/02-Python/03-字符串操作.md
+++ b/04-大数据/02-Python/03-字符串操作.md
@@ -147,3 +147,19 @@ thwas was string example....wow!!! thwas was really string
 thwas was string example....wow!!! thwas is really string
 ```
 
+## 6 正则replace
+
+```python
+import re
+aa='abc def\ngh\'"kk k'
+dd=re.sub('(\n|\'|"| )', '', aa) 
+print(dd) 
+# 输出 
+# abcdefghkkk
+
+print(aa) 
+# 输出
+# abc def
+# gh'"kk k
+```
+
