--- a/04-大数据/数据仓库/01-数仓分层.md
+++ b/04-大数据/数据仓库/01-数仓分层.md
@@ -43,22 +43,18 @@
 ### 3.2 ODS层 
 
 ```
-说明：原始数据，不做任何修改（一般为外表） 注意：调度任务尽可能早 
-命名：ods_来源类型_描述_增量/全量标识
-来源类型：
-ext:外表（external）
-db:db来源(如mysql)
-log:从日志中采集
-
-数据周期：
-增量数据：di
-全量数据：dd
-按小时的增量表：hi
-按小时的全量表：hh
-
-例如：
-ods_log_behavior_hi(按小时增量的从日志收集的行为信息)
-ods_db_order_di(按天增量的从数据库收集的订单数据)
+数据库：ods_业务名_源系统表名_来源_增量全量分区标记
+	如：ods_mebmer_user_member_mysql_di
+	解释：业务名：member;源系统表名：user_member;来源：mysql;增量标记：di
+	
+日志：ods_业务名_源系统文件名_来源_增量全量分区标记
+	如：ods_qav_behavior_log_di
+	解释：业务名：qav;源系统文件名：behavior;来源log;增量标记：di
+	
+数据来源类型有：
+	db:mysql/pg
+	log:日志
+	ext:外部来源
 ```
 
 更新周期
@@ -72,6 +68,25 @@ ods_db_order_di(按天增量的从数据库收集的订单数据)
 | nd       | 死表或者不定期更新的全量表                                   |
 | wd       | 每周的分区中保留的是历史至今的全量数据，根据业务使用场景制定例行清理策略 |
 | wi       | 每周的分区中保留的是对应周的增量数据，可以是汇总数据也可以是明细数据，一般永久保留 |
+| da       | 每天全量                                                     |
+| ha       | 按小时全量                                                   |
+| ma       | 按月全量                                                     |
+
+数据格式：
+
+| MySQL数据类型            | ODS数据类型 |
+| ------------------------ | ----------- |
+| TINYINT                  | TINYINT     |
+| SMALLINT/MEDIUMINT       | SMALLINT    |
+| INTEGER                  | INT         |
+| BIGINT                   | BIGINT      |
+| FLOAT                    | FLOAT       |
+| DOUBLE                   | DOUBLE      |
+| DECIMAL                  | DECIMAL     |
+| CHAR/VARCHAR             | VARCHAR     |
+| LONGTEXT/TEXT            | STRING      |
+| DATE/TIMESTAMP/TIME/YEAR | STRING      |
+| DATETIME                 | STRING      |
 
 ### 3.3 DWD层
 
