拉链表笔记错误更新

--- a/04-大数据/数据仓库/02-拉链表.md
+++ b/04-大数据/数据仓库/02-拉链表.md
@@ -72,7 +72,7 @@
 | ------- | --------- | ----- | ---------- | ---------- |
 | 1       | A         | 1111  | 2019-12-30 | 9999-99-99 |
 | 2       | B         | 2222  | 2020-01-01 | 9999-99-99 |
-| 3       | C         | 3333  | 2020-01-01 | 2020-01-01 |
+| 3       | C         | 3333  | 2020-01-01 | 2020-01-02 |
 | 3       | C         | 3333x | 2020-01-02 | 9999-99-99 |
 | 4       | D         | 4444  | 2020-01-02 | 9999-99-99 |
 
@@ -151,6 +151,7 @@ from ods_user_init_snap_nd
 -- 如果create_date!=update_date则代表当日更新的用户信息
 -- 在2020-01-03我们从mysql中抽取2020-01-02变化的数据并存放到dt=2020-01-02的分区中
 -- select * from user where update_date='2020-01-02'
+-- 每日新增每个id只保留一条（按日的拉链）
 create external table ods_user_new_part_di (
 	user_id string comment '用户id',
 	user_name string comment '用户名',
@@ -171,7 +172,7 @@ location '/ods/ods_user_new_part_di'
 
 1. 未更新的数据（拉链表里的老数据，这部分不动）
 2. 当天更新的数据（在拉链表中的直接把结束日期更改为当天）
-3. 完全新增的数据和更新的新状态数据（直接合并入拉链表）
+3. 完全新增的数据和更新的新状态数据（直接合并入拉链表，创建时间改为当天，失效时间置位9999-99-99）
 
 ```sql
 -- 2020-01-03更新2020-01-02变化的信息到拉链表
@@ -187,20 +188,43 @@ with user_add_and_update_mes as (
     where dt='2020-01-02'
 )
 insert overwirte table dw_user_his_nd
-select -- 历史数据(如果数据无改变，则直接插入；如果数据更新了，则更改老数据的失效日期更改为指定日期)
+select -- 拉链表历史数据(如果数据无改变，则直接插入；如果数据更新了，则更改老数据的失效日期为更新日期)
 	t1.user_id as user_id,
 	t1.user_name as user_name,
 	t1.phone as phone,
 	t1.begin_date as begin_date,
-	if(t2.user_id is null, end_date, '2020-01-02') as end_date
-from dw_user_his_nd t1
+	case 
+		-- 如果t2.user_id is null则代表该user_id的信息没有变化，所以沿用原有end_date（end_date=t1.end_date）
+		when t2.user_id is null then t1.end_date
+		
+		-- 如果t2.user_id is not null and t1.end_date!='9999-99-99'则代表该user_id今天有数据更新，
+		-- 并且是老的变更数据，所以还是沿用原有end_date（end_date=t1.end_date）
+		when t2.user_id is not null and t1.end_date!='9999-99-99' then t1.end_date
+	
+		-- 如果t2.user_id is not null and t1.end_date='9999-99-99'则代表该user_id今天有数据更新，
+		-- 并且是当天需要过期的数据，所以end_date置位最新(end_date=2020-01-02)
+		when t2.user_id is not null and t1.end_date='9999-99-99' then '2020-01-02'
+	end as end_date
+from (
+    -- 得到拉链表在t-2(2020-01-01)的有效数据
+	select
+    	user_id,
+		user_name,
+		phone,
+		begin_date, 
+		end_date
+    from dw_user_his_nd
+    where begin_day<='2020-01-01' and end_day>='2020-01-01'
+) t1
 left join user_add_and_update_mes t2 on t1.user_id=t2.user_id
+
 union all
-select -- 新增或者更新的新状态数据
+
+select -- 新增或者更新的新状态的数据直接插入(begin_day置位当天，end_day置位9999-99-99)
 	user_id,
 	user_name,
 	phone,
-	create_date as begin_date,
+	'2020-01-02' as begin_date,
 	'9999-99-99' as end_date
 from user_add_and_update_mes
 ```
