jvm类加载机制

--- a/02-后端相关/Jvm/02-虚拟机类加载子系统.md
+++ b/02-后端相关/Jvm/02-虚拟机类加载子系统.md
@@ -256,21 +256,26 @@ public class ClassLoaderTest {
 
 Java虚拟机对class文件采用的是按需加载的方式，也就是说当需要使用该类时才会将它的class文件加载到内存生成class对象。而且加载某个类的class文件时，Java虚拟机采用的是双亲委派模式，即把请求交由父类处理，它是一种任务委派模式。
 
-#### 4.3.1 双亲委派机制
+#### 4.3.1工作原理
 
+- 如果一个类加载器收到了类加载请求，它并不会自己先去加载，而是把这个请求委托给父类的加载器去执行；
+- 如果父类加载器还存在其父类加载器，则进一步向上委托，依次递归，请求最终将到达顶层的启动类加载器；
+- 如果父类加载器可以完成类加载任务，就加载并成功返回，倘若父类加载器无法完成此加载任务，子加载器才会尝试自己去加载，这就是双亲委派模式。
 
+![image-20201215185910933](picture/image-20201215185910933.png)
 
-说到类加载器那么就要谈谈类加载器之间的关系，加载器之间的关系称作为**双亲委派模型**（除了bootstrap ClassLoader外，其他的类加载器都有自己的父类加载器，类加载器都是使用组合关系来复用父类加载器的代码）
+#### 4.3.2 沙箱安全机制
 
-**双亲委派模型**工作过程：如果一个类加载器收到了类加载的请求，它首先不会自己去加载这个类，而是把这个请求委派给父类加载器去完成，每个层次的类加载器都是这样的，因此所有的加载器请求最终都应该传送到顶层的启动类加载器，之后当父类加载器反馈自己无法完成这个加载请求时，子加载器才会尝试自己去加载。
+假如我们自定义了一个String类(路径同jdk中的路径java.lang.String)，但是在真正加载自定义String类的时候会率先使用引导类加载器(bootstrap class loader)加载，而引导类加载器在加载的过程中会先加载jdk自带的文件（rt.jar包中java.lang.String.class），如果我们再自定义的String中运行main方法就会报没有main方法的错，这就是因为加载的是rt.jar包中的String类。这样可以保证对java核心源代码的保护，这就是沙箱安全机制。
 
+#### 4.3.3 双亲委派机制的优势
 
+通过上面的例子，我们可以知道，双亲委派机制具有下面的优点：
 
-
-
-
-
-
+1. 避免类的重复加载
+2. 保护程序安全，防止核心API被随意篡改
+    - 自定义类：java.lang.String
+    - 自定义类：java.lang.ShkStart（报错：阻止创建 java.lang开头的类）
 
 ## ps-相关资料
 
