--- a/02-后端相关/Jvm/07-运行时数据区-4-堆.md
+++ b/02-后端相关/Jvm/07-运行时数据区-4-堆.md
@@ -229,6 +229,118 @@ Exception in thread "main" java.lang.OutOfMemoryError: Java heap space
 
 ## 4 Minor GC，MajorGC、Full GC
 
+- Minor GC：新生代的GC
+- Major GC：老年代的GC
+- Full GC：整堆收集，收集整个Java堆和方法区的垃圾收集
+
+JVM在进行GC时，并非每次都对上面三个内存区域一起回收的，大部分时候回收的都是指新生代。针对Hotspot VM的实现，它里面的GC按照回收区域又分为两大种类型：一种是部分收集（Partial GC），一种是整堆收集（FullGC）
+
+部分收集：不是完整收集整个Java堆的垃圾收集。其中又分为：
+
+- 新生代收集（MinorGC/YoungGC）：只是新生代的垃圾收集
+- 老年代收集（MajorGC/o1dGC）：只是老年代的圾收集。
+    - 目前，只有CMSGC会有单独收集老年代的行为。
+    - 注意，很多时候Major GC会和Fu11GC混淆使用，需要具体分辨是老年代回收还是整堆回收。
+- 混合收集（MixedGC）：收集整个新生代以及部分老年代的垃圾收集。（目前，只有G1 GC会有这种行为）
+
+整堆收集（FullGC）：收集整个java堆和方法区的垃圾收集。
+
+### 4.1 Minor GC
+
+当年轻代空间不足时，就会触发MinorGC，这里的年轻代满指的是Eden代满，Survivor满不会引发GC。（每次Minor GC会清理年轻代的内存。）
+
+因为Java对象大多都具备 **朝生夕灭** 的特性，所以Minor GC非常频繁，一般回收速度也比较快。这一定义既清晰又易于理解。
+
+Minor GC会引发STW，暂停其它用户的线程，等垃圾回收结束，用户线程才恢复运行。
+
+### 4.2 MajorGC
+
+指发生在老年代的GC，对象从老年代消失时，我们说 “Major Gc” 或 “Full GC” 发生了
+
+出现了MajorGC，经常会伴随至少一次的Minor GC（但非绝对的，在Parallel Scavenge收集器的收集策略里就有直接进行MajorGC的策略选择过程）
+
+- 也就是在老年代空间不足时，会先尝试触发MinorGC。如果之后空间还不足，则触发Major GC
+
+**Major GC的速度一般会比MinorGC慢10倍以上**，STW的时间更长，如果Major GC后，内存还不足，就报OOM了.
+
+### 4.3 Full GC
+
+触发FullGC执行的情况有如下五种：
+
+- 调用System.gc()时，系统建议执行FullGC，但是不必然执行
+- 老年代空间不足
+- 方法区空间不足
+- 通过Minor GC后进入老年代的平均大小大于老年代的可用内存
+- 由Eden区、survivor space（From Space）区向survivor space（To Space）区复制时，对象大小大于To Space可用内存，则把该对象转存到老年代，且老年代的可用内存小于该对象大小
+
+说明：Full GC 是开发或调优中尽量要避免的。这样暂时时间会短一些
+
+## 5 堆空间分代思想
+
+Java堆分代主要原因是：不同对象的生命周期不同，70%-99%的对象是临时对象。
+
+其实不分代完全可以，分代的唯一理由就是优化GC性能。如果没有分代，那所有的对象都在一块，就如同把一个学校的人都关在一个教室。GC的时候要找到哪些对象没用，这样就会对堆的所有区域进行扫描。而很多对象都是朝生夕死的，如果分代的话，把新创建的对象放到某一地方，当GC的时候先把这块存储“朝生夕死”对象的区域进行回收，这样就会腾出很大的空间出来。
+
+![image-20201223125811521](picture/image-20201223125811521.png)
+
+![image-20201223125825382](picture/image-20201223125825382.png)
+
+## 6 线程本地分配缓存-TLAB
+
+### 6.1 什么是TLAB
+
+TLAB（Thread Local Allocation Buffer ）即线程本地分配缓存，jvm为每个线程单独分配了一个缓冲区，这就是TLAB。
+
+堆区是线程共享区域，任何线程都可以访问到堆区中的共享数据,由于对象实例的创建在JVM中非常频繁，因此在并发环境下从堆区中划分内存空间是线程不安全的，为避免多个线程操作同一地址，需要使用加锁等机制，进而影响分配速度，所以为每个线程都创建了TLAB。
+
+从内存模型而不是垃圾收集的角度，对Eden区域继续进行划分，JVM为每个线程分配了一个私有缓存区域，它包含在Eden空间内。多线程同时分配内存时，使用TLAB可以避免一系列的非线程安全问题，同时还能够提升内存分配的吞吐量，因此我们可以将这种内存分配方式称之为快速分配策略。
+
+<img src="picture/image-20201223130612489.png" alt="image-20201223130612489" style="zoom:70%;" />
+
+尽管不是所有的对象实例都能够在TLAB中成功分配内存，但JVM确实是将TLAB作为内存分配的首选。在程序中，开发人员可以通过选项“-Xx:UseTLAB”设置是否开启TLAB空间。默认情况下，TLAB空间的内存非常小，仅占有整个Eden空间的1%，当然我们可以通过选项“-Xx:TLABWasteTargetPercent”设置TLAB空间所占用Eden空间的百分比大小。
+
+一旦对象在TLAB空间分配内存失败时，JVM就会尝试着通过使用加锁机制确保数据操作的原子性，从而直接在Eden空间中分配内存。
+
+### 6.2 TLAB分配过程
+
+<img src="picture/image-20201223130518806.png" alt="image-20201223130518806" style="zoom:70%;" />
+
+## 7 堆空间的常用参数设置
+
+| 参数值                      | 含义                                                   | 备注 |
+| --------------------------- | ------------------------------------------------------ | ---- |
+| -XX：+PrintFlagsInitial     | 查看所有的参数的默认初始值                             |      |
+| -XX：+PrintFlagsFinal       | 查看所有的参数的最终值（可能会存在修改，不再是初始值） |      |
+| -Xms                        | 初始堆空间内存（默认为物理内存的1/64）                 |      |
+| -Xmx                        | 最大堆空间内存（默认为物理内存的1/4）                  |      |
+| -Xmn                        | 设置新生代的大小。（初始值及最大值）                   |      |
+| -XX:NewRatio                | 配置新生代与老年代在堆结构的占比                       |      |
+| -XX:SurvivorRatio           | 设置新生代中Eden和S0/S1空间的比例                      |      |
+| -XX:MaxTenuringThreshold    | 设置新生代垃圾的最大年龄                               |      |
+| -XX：+PrintGCDetails        | 输出详细的GC处理日志                                   |      |
+| -XX:HandlePromotionFalilure | 是否设置空间分配担保                                   |      |
+
+在发生Minor GC之前，虚拟机会检查老年代最大可用的连续空间是否大于新生代所有对象的总空间。
+
+1. 如果大于，则此次Minor GC是安全的
+2. 如果小于，则虚拟机会查看-xx:HandlePromotionFailure设置值是否允担保失败。
+    - 如果HandlePromotionFailure=true，那么会继续检查老年代最大可用连续空间是否大于历次晋升到老年代的对象的平均大小。
+        1. 如果大于，则尝试进行一次Minor GC，但这次Minor GC依然是有风险的；
+        2. 如果小于，则改为进行一次FullGC。
+    - 如果HandlePromotionFailure=false，则改为进行一次Full GC。
+
+## 8 逃逸分析
+
+
+
+
+
+
+
+
+
+
+
 
 
 
