堆-逃逸分析

--- a/02-后端相关/Jvm/07-运行时数据区-4-堆.md
+++ b/02-后端相关/Jvm/07-运行时数据区-4-堆.md
@@ -331,27 +331,185 @@ TLAB（Thread Local Allocation Buffer ）即线程本地分配缓存，jvm为每
 
 ## 8 逃逸分析
 
+### 8.1 逃逸分析简介
+
+随着JIT编译器（及时编译器just in time）的发展与逃逸分析技术逐渐成熟，栈上分配、标量替换优化技术将会导致一些微妙的变化，所有的对象都分配到堆上也渐渐变得不那么“绝对”了。
+
+在Java虚拟机中，对象是在Java堆中分配内存的，这是一个普遍的常识。但是也有一种特殊情况，那就是如果经过逃逸分析（Escape Analysis）后发现，如果一个对象并没有逃逸出方法的话，那么就可能被优化成栈上分配。这样就无需在堆上分配内存，也无须进行垃圾回收了，这也是最常见的堆外存储技术。
+
+如何想让对象在栈上分配，需要使用逃逸分析手段，这是一种可以有效减少Java程序中同步负载和内存堆分配压力的跨函数全局数据流分析算法。通过逃逸分析，Java Hotspot编译器能够分析出一个新的对象的引用的使用范围从而决定是否要将这个对象分配到堆上，逃逸分析的基本行为就是分析对象动态作用域：
+
+- 当一个对象在方法中被定义后，对象**只在方法内部使用**，则认为**没有发生逃逸**。
+- 当一个对象在方法中被定义后，它**被外部方法所引用**，则认为**发生逃逸**。例如作为调用参数传递到其他地方中。
+
+### 8.2 逃逸分析举例
+
+```java
+/**
+ * 该方法发生了逃逸，因为创建的sb对象可以被外部方法使用
+ */
+public static StringBuffer createStringBuffer1(String s1, String s2) {
+    StringBuffer sb = new StringBuffer();
+    sb.append(s1);
+    sb.append(s2);
+    return sb;
+}
 
 
+/**
+ * 该方法未发生逃逸，外部无法引用方法内部出创建的对象
+ */
+public static StringBuffer createStringBuffer2(String s1, String s2) {
+    StringBuffer sb = new StringBuffer();
+    sb.append(s1);
+    sb.append(s2);
+    return sb.toString();
+}
+```
 
+### 8.3 逃逸分析参数设置
 
+在JDK 1.7 版本之后，HotSpot中默认就已经开启了逃逸分析，如果使用的是较早的版本，开发人员则可以通过：
 
+- 设置参数“-xx：+DoEscapeAnalysis"显式开启逃逸分析
+- 设置参数“-xx：+PrintEscapeAnalysis"查看逃逸分析的筛选结果
 
+### 8.4 逃逸分析编译器会做的优化
 
+开发中能使用局部变量的，就不要使用在方法外定义。
 
+使用逃逸分析，编译器可以对代码做如下优化：
 
+- 栈上分配：将堆分配转化为栈分配。如果一个对象在子程序中被分配，要使指向该对象的指针永远不会发生逃逸，对象可能是栈上分配的候选，而不是堆上分配
+- 同步省略：如果一个对象被发现只有一个线程被访问到，那么对于这个对象的操作可以不考虑同步。
+- 分离对象或标量替换：有的对象可能不需要作为一个连续的内存结构存在也可以被访问到，那么对象的部分（或全部）可以不存储在内存，而是存储在CPU寄存器中。
 
+#### 8.4.1 栈上分配
 
+JIT编译器在编译期间根据逃逸分析的结果，发现如果一个对象并没有逃逸出方法的话，就可能被优化成栈上分配。分配完成后，继续在调用栈内执行，最后线程结束，栈空间被回收，局部变量对象也被回收，这样就无须进行垃圾回收了。
 
+举例：
 
+```java
+/**
+ * 栈上分配
+ * -Xmx1G -Xms1G -XX:-DoEscapeAnalysis -XX:+PrintGCDetails
+ */
+class User {
+    private String name;
+    private String age;
+    private String gender;
+    private String phone;
+}
+public class StackAllocation {
+    public static void main(String[] args) throws InterruptedException {
+        long start = System.currentTimeMillis();
+        for (int i = 0; i < 100000000; i++) {
+            alloc();
+        }
+        long end = System.currentTimeMillis();
+        System.out.println("花费的时间为：" + (end - start) + " ms");
 
+        // 为了方便查看堆内存中对象个数，线程sleep
+        Thread.sleep(10000000);
+    }
 
+    private static void alloc() {
+        // 未发生逃逸
+        User user = new User(); 
+    }
+}
+```
 
+1. 设置参数**关闭逃逸分析**结果
 
+    - 参数： -Xmx1G -Xms1G -XX:-DoEscapeAnalysis -XX:+PrintGCDetails  （备注：DoEscapeAnalysis 前是-号代表关闭）
+    - 结果：总花费时间：664 ms
+    - 然后查看内存的情况，发现有大量的User存储在堆中：
+        <img src="picture/image-20201223193354310.png" alt="image-20201223193354310" style="zoom:50%;" />
 
+2. 设置参数**开启逃逸分析**结果
 
+    - 参数：-Xmx1G -Xms1G -XX:+DoEscapeAnalysis -XX:+PrintGCDetails（备注：DoEscapeAnalysis 前是+号代表开启）
 
+    - 结果：总花费时间：5 ms
 
+    - 在看内存情况，我们发现只有很少的User对象，说明User未发生逃逸，因为它存储在栈中，随着栈的销毁而消失：
+
+        <img src="picture/image-20201223193555952.png" alt="image-20201223193555952" style="zoom:50%;" />
+
+#### 8.4.2 同步省略（锁消除）
+
+线程同步的代价是相当高的，同步的后果是降低并发和性能。
+
+在动态编译同步块的时候，JIT编译器可以借助逃逸分析来判断同步块所使用的锁对象是否只能够被一个线程访问而没有被发布到其他线程。如果没有，那么JIT编译器在编译这个同步块的时候就会取消对这部分代码的同步。这样就能大大提高并发性和性能。这个取消同步的过程就叫同步省略，也叫锁消除。
+
+例如下面的代码：
+
+```java
+public void f() {
+    Object obj = new Object();
+    synchronized(obj) {
+        System.out.println(obj);
+    }
+}
+```
+
+代码中对obj这个对象加锁，但是obj对象的生命周期只在f()方法中，并不会被其他线程所访问到，所以在JIT编译阶段就会被优化掉，优化成：
+
+```java
+public void f() {
+    Object obj = new Object();
+	System.out.println(obj);
+}
+```
+
+#### 8.4.3 分离对象(标量替换)
+
+参数`-XX：+EliminateAllocations`：可以开启标量替换（默认打开）。
+
+标量（scalar）是指一个无法再分解成更小的数据的数据，Java中的原始数据类型就是标量。
+
+相对的，那些还可以分解的数据叫做聚合量（Aggregate），Java中的对象就是聚合量，因为他可以分解成其他聚合量和标量。
+
+在JIT阶段，如果经过逃逸分析，发现一个对象(聚合量)不会被外界访问的话，那么经过JIT优化，就会把这个对象拆解成若干个成员变量(标量)来代替。这个过程就是标量替换。
+
+```java
+public static void main(String args[]) {
+    alloc();
+}
+
+class Point {
+    private int x;
+    private int y;
+}
+
+private static void alloc() {
+    Point point = new Point(1,2);
+    System.out.println("point.x" + point.x + ";point.y" + point.y);
+}
+```
+
+以上代码，经过标量替换后，就会变成
+
+```java
+private static void alloc() {
+    int x = 1;
+    int y = 2;
+    System.out.println("point.x = " + x + "; point.y=" + y);
+}
+```
+
+可以看到，Point这个聚合量经过逃逸分析后，发现他并没有逃逸，就被替换成两个标量了。
+
+标量替换的好处：就是可以大大减少堆内存的占用。因为一旦不需要创建对象了，那么就不再需要分配堆内存了。 标量替换为栈上分配提供了很好的基础。
+
+### 8.5 逃逸分析的不足
+
+逃逸分析的不足点在于**无法保证逃逸分析的性能消耗一定能高于他本身的消耗**。
+
+虽然经过逃逸分析可以做标量替换、栈上分配、和锁消除。但是逃逸分析自身也是需要进行一系列复杂的分析的，**这其实也是一个相当耗时的过程**。 
+一个极端的例子，就是经过逃逸分析之后，发现没有一个对象是不逃逸的，那这个逃逸分析的过程就白白浪费掉了。
 
 ## ps-相关资料
 
