对象的实例化以及访问定位

--- a/02-后端相关/Jvm/03-运行时数据区域.md
+++ b/02-后端相关/Jvm/03-运行时数据区域.md
@@ -8,6 +8,8 @@ Java虚拟机在执行Java程序的过程中会把它所管理的内存划分为
 
 ![image-20201215194635854](picture/image-20201215194635854.png)
 
+![1608818540587](picture/1608818540587.png)
+
 ## 1 程序计数器（线程私有）
 
 程序计数器可以看做当前线程所执行字节码的行号指示器。在虚拟机的概念模型中，字节码指示器就是通过改变这个计数器的值来选取下一条需要执行的字节码指令。
