--- a/02-后端相关/Jvm/08-运行时数据区-5-方法区.md
+++ b/02-后端相关/Jvm/08-运行时数据区-5-方法区.md
@@ -8,6 +8,8 @@
 
 <img src="picture/image-20201223211144943.png" alt="image-20201223211144943" style="zoom:80%;" />
 
+![1608818540587](picture/1608818540587.png)
+
 ## 2 方法区的理解
 
 《Java虚拟机规范》中明确说明：“尽管所有的方法区在逻辑上是属于堆的一部分，但一些简单的实现可能不会选择去进行垃圾收集或者进行压缩。”但对于HotSpotJVM而言，方法区还有一个别名叫做Non-Heap（非堆），目的就是要和堆分开。 
