对象的实例化以及访问定位

--- a/02-后端相关/Jvm/09-对象的实例化、组成和访问定位.md
+++ b/02-后端相关/Jvm/09-对象的实例化、组成和访问定位.md
@@ -90,7 +90,7 @@
 
 #### 2.1.2 类型指针
 
- 指向类元数据InstanceKlass，确定该对象所属的类型。指向的其实是方法区中存放的类元信息 
+ 指向类元数据InstanceClass，确定该对象所属的类型。指向的其实是方法区中存放的类元信息 
 
 ### 2.2 实例数据
 
