--- a/02-后端相关/Jvm/02-虚拟机类加载子系统.md
+++ b/02-后端相关/Jvm/02-虚拟机类加载子系统.md
@@ -248,8 +248,8 @@ public class ClassLoaderTest {
 
 用户自定义类加载器实现步骤：
 
-- 开发人员可以通过继承抽象类ava.1ang.ClassLoader类的方式，实现自己的类加载器，以满足一些特殊的需求
-- 在JDK1.2之前，在自定义类加载器时，总会去继承ClassLoader类并重写1oadClass（）方法，从而实现自定义的类加载类，但是在JDK1.2之后已不再建议用户去覆盖1oadclass（）方法，而是建议把自定义的类加载逻辑写在findclass（）方法中
+- 开发人员可以通过继承抽象类Java.lang.ClassLoader类的方式，实现自己的类加载器，以满足一些特殊的需求
+- 在JDK1.2之前，在自定义类加载器时，总会去继承ClassLoader类并重写loadClass（）方法，从而实现自定义的类加载类，但是在JDK1.2之后已不再建议用户去覆盖loadclass（）方法，而是建议把自定义的类加载逻辑写在findclass（）方法中
 - 在编写自定义类加载器时，如果没有太过于复杂的需求，可以直接继承URIClassLoader类，这样就可以避免自己去编写findclass（）方法及其获取字节码流的方式，使自定义类加载器编写更加简洁。
 
 ### 4.3 双亲委派机制
