--- a/02-后端相关/Jvm/08-运行时数据区-5-方法区.md
+++ b/02-后端相关/Jvm/08-运行时数据区-5-方法区.md
@@ -12,9 +12,7 @@
 
 ## 2 方法区的理解
 
-《Java虚拟机规范》中明确说明：“尽管所有的方法区在逻辑上是属于堆的一部分，但一些简单的实现可能不会选择去进行垃圾收集或者进行压缩。”但对于HotSpotJVM而言，方法区还有一个别名叫做Non-Heap（非堆），目的就是要和堆分开。 
-
-所以，方法区看作是一块独立于Java堆的内存空间。 
+《Java虚拟机规范》中明确说明：“尽管所有的方法区在逻辑上是属于堆的一部分，但一些简单的实现可能不会选择去进行垃圾收集或者进行压缩。”但对于HotSpotJVM而言，方法区还有一个别名叫做Non-Heap（非堆），目的就是要和堆分开。 所以，方法区看作是一块独立于Java堆的内存空间。 
 
 <img src="picture/1608800805892.png" alt="1608800805892" style="zoom:60%;" />
 
@@ -184,7 +182,7 @@ Hotspot中方法区的变化：
 ### 7.2 永久代被元空间替代的原因
 
 1.  JRockit是和HotSpot融合后的结果，因为JRockit没有永久代，所以他们不需要配置永久代 。（任性）
-2.  永久代很设置空间大小。 
+2.  永久代很难设置空间大小。 
 3.  元空间并不在虚拟机中，而是使用本地内存。 因此元空间的大小仅受本地内存限制。 
 4.  对永久代进行调优是很困难的 。
 5.  主要是为了降低Full GC （FULL GC的STW花费的代价远远超过MinorGC）。
