--- a/02-后端相关/Jvm/09-对象的实例化、组成和访问定位.md
+++ b/02-后端相关/Jvm/09-对象的实例化、组成和访问定位.md
@@ -65,9 +65,9 @@
 
 #### 1.2.6 执行init方法进行初始化
 
-在上述工作都完成后从虚拟机的视角来看，一个新的对象已经产生，但从Java程序的视角来看，对象创建才刚刚开始（因为<init>方法还没有执行，所有的字段都还为零）。
+在上述工作都完成后从虚拟机的视角来看，一个新的对象已经产生，但从Java程序的视角来看，对象创建才刚刚开始（因为`<init>方法`还没有执行，所有的字段都还为零）。
 
-一般来说（由字节码中是否跟随invokespecial指令所决定），执行new指令之后会接着执行<init>方法，把对象按照程序员的意愿进行初始化（初始化成员变量，执行实例化代码块，调用类的构造方法，并把堆内对象的首地址赋值给引用变量），这样一个真正的对象才算完全产生。
+一般来说（由字节码中是否跟随invokespecial指令所决定），执行new指令之后会接着执行`<init>方法`，把对象按照程序员的意愿进行初始化（初始化成员变量，执行实例化代码块，调用类的构造方法，并把堆内对象的首地址赋值给引用变量），这样一个真正的对象才算完全产生。
 
 ## 2 对象的内存布局-组成
 
