--- a/02-后端相关/Jvm/11-垃圾回收概述.md
+++ b/02-后端相关/Jvm/11-垃圾回收概述.md
@@ -159,7 +159,14 @@ public class LocalVarGC {
 
 
 
+## 3 再谈引用（强引用、软引用、弱引用、虚引用）
 
+引用分为强引用、软引用、弱引用、虚引用，这四种引用强度一次逐渐减弱。
+
+- **强引用(Strong Reference)**指的就是程序代码中普遍存在的，类似“Object obj = new Object()”这类的引用，只要强引用还存在，垃圾收集器就**永远不会回收**掉被引用的对象。
+- **软引用(Soft Reference)**用来描述一些还有用但并非必须的对象。对于软引用关联着的对象，在系统将要发生内存溢出异常之前，将会把这些对象列经回收范围之中进行**第二次回收**。如果第二次回收还没有足够的内存，才会抛出内存溢出异常。
+- **弱引用(Weak Reference)**用来描述非必须对象，但它的引用强度比软引用更弱，被软引用关联的对象只能生存到下一次垃圾收集发生之前。当垃圾收集器工作时，无论当前内存是否足够，**都会回收**掉只被弱引用关联的对象。
+- **虚引用(Phantom Reference)**也称为幽灵引用或幻影引用，它是最弱的一种引用关系。**一个对象是否有虚引用存在，完全不会对其生存时间构成影响，也无法通过虚引用来取得一个对象实例**。为一个对象设置虚引用关联的唯一目的就是在这个对象被收集器回收时收到一个系统通知。
 
 
 
@@ -183,40 +190,40 @@ public class LocalVarGC {
 
 ## xx-面试题
 
-####  蚂蚁金服
+###  蚂蚁金服
 
 - 你知道哪几种垃圾回收器，各自的优缺点，重点讲一下cms和G1？
 - JVM GC算法有哪些，目前的JDK版本采用什么回收算法？
 - G1回收器讲下回收过程GC是什么？为什么要有GC？
 - GC的两种判定方法？CMS收集器与G1收集器的特点
 
-#### 百度
+### 百度
 
 - 说一下GC算法，分代回收说下
 - 垃圾收集策略和算法
 
-#### 天猫
+### 天猫
 
 - JVM GC原理，JVM怎么回收内存
 - CMS特点，垃圾回收算法有哪些？各自的优缺点，他们共同的缺点是什么？
 
-#### 滴滴
+### 滴滴
 
 Java的垃圾回收器都有哪些，说下g1的应用场景，平时你是如何搭配使用垃圾回收器的
 
-#### 京东
+### 京东
 
 - 你知道哪几种垃圾收集器，各自的优缺点，重点讲下cms和G1，
 - 包括原理，流程，优缺点。垃圾回收算法的实现原理
 
-#### 阿里
+### 阿里
 
 - 讲一讲垃圾回收算法。
 - 什么情况下触发垃圾回收？
 - 如何选择合适的垃圾收集算法？
 - JVM有哪三种垃圾回收器？
 
-#### 字节跳动
+### 字节跳动
 
 - 常见的垃圾回收器算法有哪些，各有什么优劣？
 - System.gc（）和Runtime.gc（）会做什么事情？
