--- a/02-后端相关/Jvm/12-垃圾回收算法.md
+++ b/02-后端相关/Jvm/12-垃圾回收算法.md
@@ -78,17 +78,21 @@ python中如何解决循环引用这个问题：
 
 ### 3.1 标记-清除算法
 
+算法分为两个阶段，**标记**和**清除**，首先标记出所有需要回收的对象，在标记完成后统一收回所有被标记的对象。
 
+该算法主要有连个**不足**：第一就是标记和清除的效率都不高；第二就是空间问题，标记清除之后会**产生大量不连续的内存碎片**，空间碎片太多可能会导致以后在程序运行过程中需要分配较大对象时，无法找到足够的连续内存而不得不提前触发另一次垃圾收集动作。
 
 ### 3.2 复制算法
 
-
+为了解决效率问题，复制算法就出现了，它将可用的内存按容量划分为大小先等的两块，每次只使用其中的一块。当着一块的内存用完了，就将还存活的对象复制到另外一块上面去，然后再把已经使用过的内存空间一次清理掉。这样使得每次都是针对整个半区进行内存回收，就不用考虑内存碎片等复杂情况。
 
 ### 3.3 标记-整理算法
 
+标记过程和“标记清除”算法一样，当后续步骤不是直接对可回收对象进行清理，而是让所有存活的对象都向一端移动，让后直接清理掉端边界以外的内存。
 
+## 4 分代收集算法
 
-
+当前商业虚拟机都采用分代收集算法，这种算法**根据对象存活周期的不同将内存划分为几块**，一般是把Java堆分为**新生代**和**老年代**，这样就可以根据各个年代的特点采用最适当的收集算法。在**新生代**中每次垃圾收集时发现有大批对象死去，只有少量存活，那就选用**复制算法**，只需要付出少量存活对象的复制成本就可以完成收集，而**老年代**宏因为对象存活率高、没有额外空间对它进行分配担保，就必须使用**“标记-清除”或“标记-整理”**算法来回收。
 
 
 
