--- a/02-后端相关/Jvm/13-垃圾回收器.md
+++ b/02-后端相关/Jvm/13-垃圾回收器.md
@@ -68,7 +68,7 @@ GC垃圾收集器是和JVM一脉相承的，它是和JVM进行搭配使用，在
 - 并行回收器：ParNew、Parallel Scavenge、Parallel old
 - 并发回收器：CMS、G1
 
-### 3.2 垃圾回收器与垃圾分代的关系
+### 3.2 垃圾回收器与垃圾分代的关系(重点)
 
 ![1609684285394](picture/1609684285394.png)
 
@@ -78,7 +78,9 @@ GC垃圾收集器是和JVM一脉相承的，它是和JVM进行搭配使用，在
 
 整堆收集器：G1
 
-### 3.3 垃圾回收器的组合关系
+### 3.3 垃圾回收器的组合关系(重点)
+
+图中，虚线上面的为年轻代的垃圾收集器，下面的是老年代的垃圾收集器，G1比较特殊两个都可以：
 
 <img src="picture/1609684350943.png" alt="1609684350943" style="zoom:55%;" />
 
@@ -88,21 +90,117 @@ GC垃圾收集器是和JVM一脉相承的，它是和JVM进行搭配使用，在
 - （绿色虚线）JDK14中：弃用Paralle1 Scavenge和Serialold GC组合（JEP366）
 - （青色虚线）JDK14中：删除CMS垃圾回收器（JEP363）
 
-## 4 不同的垃圾回收器
+## 4 垃圾回收器
 
-### 4.1 Serial回收器-串行回收
+### 4.1 Serial回收器
 
+#### 4.1.1 Serial回收器-串行回收-年轻代
 
+Serial收集器是最基本、历史最悠久的垃圾收集器，是JDK1.3之前回收新生代唯一的选择。
 
-### 4.2 ParNew回收器-并行回收
+Serial收集器作为HotSpot中client模式下的默认**新生代垃圾收集器**，采用**复制算法**、串行回收和"stop-the-World"机制的方式执行内存回收。
 
+#### 4.1.2 Serial old回收器-串行回收-老年代-标记压缩算法
 
+除了年轻代之外，Serial收集器还提供用于执行**老年代垃圾收集**的**Serial old收集器**。
+Serial old收集器同样也采用了串行回收和"Stop the World"机制，只不过内存回收算法使用的是**标记-压缩算法**。
 
-### 4.3 Parallel回收器-吞吐量优先
+- Serial old是运行在Client模式下默认的老年代的垃圾回收器
+- Serial old在Server模式下主要有两个用途：
+    1. 与新生代的Parallel scavenge配合使用
+    2. 作为老年代CMS收集器的后备垃圾收集方案
 
+#### 4.1.3 总结&优缺点
 
+<img src="picture/image-20210104123816349.png" alt="image-20210104123816349" style="zoom:70%;" />
+
+这个收集器是一个**单线程的收集器**，但它的“单线程”的意义并不仅仅说明它只会使用一个CPU或一条收集线程去完成垃圾收集工作，更重要的是在它进行垃圾收集时，必须暂停其他所有的工作线程，直到它收集结束（Stop The World）
+
+- 优点：
+    1. 简单而高效（与其他收集器的单线程比），对于限定单个cPU的环境来说，Serial收集器由于没有线程交互的开销，专心做垃圾收集自然可以获得最高的单线程收集效率。运行在client模式下的虚拟机是个不错的选择。
+        在用户的桌面应用场景中，可用内存一般不大（几十MB至一两百MB），可以在较短时间内完成垃圾收集（几十ms至一百多ms），只要不频繁发生，使用串行回收器是可以接受的。
+- 缺点：
+    1. 串行执行，而且限定单核cpu才可以用，现在基本都不是单核的了
+    2. 对于交互较强的应用而言，这种垃圾收集器是不能接受的。
+        如一般在Java web应用程序中是不会采用串行垃圾收集器的。
+
+在HotSpot虚拟机中，使用`-XX：+UseSerialGC`参数可以指定年轻代和老年代都使用串行收集器。(等价于新生代用Serial GC，且老年代用Serial old GC)
+
+### 4.2 ParNew回收器-并行回收-年轻代-复制算法
+
+如果说serialGC是年轻代中的单线程垃圾收集器，那么ParNew收集器则是serial收集器的多线程版本。
+
+- Par是Parallel的缩写，New：只能处理的是新生代
+
+ParNew 收集器除了采用**并行回收**的方式执行内存回收外，在其他方面两款垃圾收集器之间几乎没有任何区别。
+ParNew收集器在年轻代中同样也是采用**复制算法**、"stop-the-World"机制。
+
+ParNew 是很多JVM运行在Server模式下新生代的默认垃圾收集器。
+
+- 对于新生代，回收次数频繁，使用并行方式高效。
+- 对于老年代，回收次数少，使用串行方式节省资源。（CPU并行需要切换线程，串行可以省去切换线程的资源）
+
+<img src="picture/image-20210104125617107.png" alt="image-20210104125617107" style="zoom:70%;" />
+
+由于ParNew收集器是基于并行回收，那么是否可以断定ParNew收集器的回收效率在任何场景下都会比serial收集器更高效？
+
+- ParNew收集器运行在**多个CPU的环境下**，由于可以充分使用多CPU、多核心等物理硬件资源，可以更快的完成垃圾收集，提高程序的吞吐量。
+- 但是在**单个CPU的环境下**，ParNew收集器不比Serial收集器更高效（因为Serial不需要频繁的任务切换，省却了一些额外开销）
+
+因为除Serial外，目前只有ParNew GC能与CMS收集器配合工作
+
+在程序中开发人员可以通过选项"-XX：+UseParNewGC"手动指定使用ParNew收集器执行内存回收任务。它表示年轻代使用并行收集器，不影响老年代。
+
+-XX:ParallelGCThreads限制线程数量，默认开启和CPU数据相同的线程数。
+
+### 4.3 Parallel回收器-JDK8中默认
+
+#### 4.3.1 Parallel Scavenge回收器-吞吐量优先-并行回收-年轻代-复制算法
+
+HotSpot的年轻代中除了拥有ParNew收集器是基于并行回收的以外，`Parallel Scavenge收集器`同样也采用了**复制算法**、并行回收和"Stop the World"机制。
+
+那么Parallel 收集器的出现是否多此一举？
+
+- 和ParNew收集器不同，Parallel Scavenge收集器的目标则是达到一个**可控制的吞吐量**（Throughput），它也被称为吞吐量优先的垃圾收集器。
+- 自适应调节策略也是Parallel Scavenge与ParNew一个重要区别。
+
+应用场景：
+高吞吐量则可以高效率地利用CPU时间，尽快完成程序的运算任务，主要适合在后台运算而不需要太多交互的任务。
+因此，常见在服务器环境中使用。例如那些执行批量处理、订单处理、工资支付、科学计算的应用程序。
+
+#### 4.3.2 Parallel old回收器-并行回收-老年代-标记压缩算法
+
+Parallel收集器在JDK1.6时提供了用于执行老年代垃圾收集的Parallel old收集器，用来代替老年代的serial old收集器。
+
+Parallel old收集器采用了**标记-压缩**算法，但同样也是基于**并行回收**和"Stop-the-World"机制。
+
+#### 4.3.3 总结&优缺点
+
+<img src="picture/image-20210104131337027.png" alt="image-20210104131337027" style="zoom:70%;" />
+
+- 优点
+    1. 在程序吞吐量优先的应用场景中，Parallel收集器和Parallel old收集器的组合，在server模式下的内存回收性能很不错。在Java8中，默认是此垃圾收集器。
+    2. 可以控制吞吐量；
+    3. 拥有自适应调节策略
+
+#### 4.3.4 参数配置
+
+- `-XX：+UseParallelGC` 手动指定年轻代使用Parallel并行收集器执行内存回收任务。（与ParalleloldGc互相激活，作用于新生代，默认jdk8是开启的）
+- `-XX：+UseParalleloldGc` 手动指定老年代都是使用并行回收收集器。（与ParallelGC互相激活，作用于老年代，默认jdk8是开启的）
+- `-XX:ParallelGcthreads`设置年轻代并行收集器的线程数。最好与CPU数量相等，以避免过多的线程数影响垃圾收集性能。
+    - 当CPU数量大于8个，ParallelGCThreads的值等于3+[5*CPU Count]/8]
+- `-XX:MaxGCPauseMillis` 设置垃圾收集器最大停顿时间（即STW的时间）,单位是毫秒。
+    - 为了尽可能地把停顿时间控制在MaxGCPauseMills以内，收集器在工作时会调整Java堆大小或者其他一些参数。 对于用户来讲，停顿时间越短体验越好。但是在服务器端，我们注重高并发，整体的吞吐量。所以服务器端适合Parallel，进行控制。该参数使用需谨慎。
+- `-XX:GCTimeRatio`垃圾收集时间占总时间的比例（=1/（N+1））。用于衡量吞吐量的大小。
+    - 取值范围（0，100）。默认值99，也就是垃圾回收时间不超过1%。
+    - 与前一个`-XX:MaxGCPauseMillis`参数有一定矛盾性。暂停时间越长，Radio参数就容易超过设定的比例。
+- `-XX:+UseAdaptivesizepplicy` 设置Parallel scavenge收集器具有自适应调节策略
+    - 在这种模式下，年轻代的大小、Eden和Survivor的比例、晋升老年代的对象年龄等参数会被自动调整，已达到在堆大小、吞吐量和停顿时间之间的平衡点。
+    - 在手动调优比较困难的场合，可以直接使用这种自适应的方式，仅指定虚拟机的最大堆、目标的吞吐量（GCTimeRatio）和停顿时间（MaxGCPauseMills），让虚拟机自己完成调优工作。
 
 ### 4.4 CMS回收器-低延迟
+
+
 
 
 
