--- a/02-后端相关/Jvm/13-垃圾回收器.md
+++ b/02-后端相关/Jvm/13-垃圾回收器.md
@@ -36,10 +36,12 @@ GC垃圾收集器是和JVM一脉相承的，它是和JVM进行搭配使用，在
 
 ### 2.3 按碎片处理方式分
 
-按碎片处理方式分可分为压缩武垃圾回收器和非压缩式垃圾回收器。
+按碎片处理方式分可分为压缩式垃圾回收器和非压缩式垃圾回收器。
 
 - 压缩式垃圾回收器会在回收完成后，对存活对象进行压缩整理，消除回收后的碎片。
 - 非压缩式的垃圾回收器不进行这步操作。
+
+### 2.4 按内存区间分
 
 按工作的内存区间分，又可分为年轻代垃圾回收器和老年代垃圾回收器。
 
@@ -338,7 +340,7 @@ G1在JDK1.7版本正式启用，移除了Experimental的标识，是**JDK9以后
 
 从经验上来说，在小内存应用上CMS的表现大概率会优于G1，而G1在大内存应用上则发挥其优势。平衡点在6-8GB之间。
 
-### 4.5.4 G1参数设置
+#### 4.5.4 G1参数设置
 
 - `-XX:+UseG1GC`：手动指定使用G1垃圾收集器执行内存回收任务
 - `-XX:G1HeapRegionSize`设置每个Region的大小。值是2的幂，范围是1MB到32MB之间，
