垃圾回收器

--- a/02-后端相关/Jvm/13-垃圾回收器.md
+++ b/02-后端相关/Jvm/13-垃圾回收器.md
@@ -10,9 +10,11 @@ GC垃圾收集器是和JVM一脉相承的，它是和JVM进行搭配使用，在
 
 虽然我们会对各个收集器进行比较，但并非为了挑选一个最好的收集器出来。没有一种放之四海皆准、任何场景下都适用的完美收集器存在，更加没有万能的收集器。所以我们选择的只是对具体应用最合适的收集器。
 
-## 2 垃圾回收器分类
+## 2 垃圾回收器分类以及衡量指标
 
-### 2.1 按线程数分
+### 2.1 垃圾回收器分类
+
+#### 2.1.1 按线程数分
 
 **按线程数分**（垃圾回收线程数）可以分为串行垃圾回收器和并行垃圾回收器。 
 
@@ -25,7 +27,7 @@ GC垃圾收集器是和JVM一脉相承的，它是和JVM进行搭配使用，在
 
 和串行回收相反，并行收集可以运用多个CPU同时执行垃圾回收，因此提升了应用的吞吐量，不过并行回收仍然与串行回收一样，采用独占式，使用了“stop-the-world”机制。
 
-### 2.2 按工作模式分
+#### 2.1.2 按工作模式分
 
 按照工作模式分可以分为并发式垃圾回收器和独占式垃圾回收器。
 
@@ -34,18 +36,18 @@ GC垃圾收集器是和JVM一脉相承的，它是和JVM进行搭配使用，在
 
 <img src="picture/1609683120991.png" alt="1609683120991" style="zoom:67%;" />
 
-### 2.3 按碎片处理方式分
+#### 2.1.3 按碎片处理方式分
 
 按碎片处理方式分可分为压缩式垃圾回收器和非压缩式垃圾回收器。
 
 - 压缩式垃圾回收器会在回收完成后，对存活对象进行压缩整理，消除回收后的碎片。
 - 非压缩式的垃圾回收器不进行这步操作。
 
-### 2.4 按内存区间分
+#### 2.1.4 按内存区间分
 
 按工作的内存区间分，又可分为年轻代垃圾回收器和老年代垃圾回收器。
 
-## 3 垃圾回收器的衡量指标
+### 2.2 垃圾回收器的衡量指标
 
 为了衡量垃圾回收器的好坏，即垃圾回收器的快慢、效率的高低等，衡量指标主要有下面几个：
 
@@ -360,7 +362,7 @@ G1的设计原则就是简化JVM性能调优，开发人员只需要简单的三
 
 G1中提供了三种垃圾回收模式：YoungGC、Mixed GC和FullGC，在不同的条件下被触发。
 
-#### 2.5.6 G1收集器的适用场景
+#### 4.5.6 G1收集器的适用场景
 
 面向服务端应用，针对具有大内存、多处理器的机器。（在普通大小的堆里表现并不惊喜）
 
@@ -375,6 +377,54 @@ G1中提供了三种垃圾回收模式：YoungGC、Mixed GC和FullGC，在不同
 - GC停顿时间过长（长于0.5至1秒）
 
 HotSpot垃圾收集器里，除了G1以外，其他的垃圾收集器使用内置的JVM线程执行GC的多线程操作，而G1GC可以采用应用线程承担后台运行的GC工作，即当JVM的GC线程处理速度慢时，系统会调用应用程序线程帮助加速垃圾回收过程。
+
+#### 4.5.7 分区Region
+
+使用G1收集器时，它将整个Java堆划分成约2048个大小相同的独立Region块，每个Region块大小根据堆空间的实际大小而定，整体被控制在1MB到32MB之间，且为2的N次幂，即1MB，2MB，4MB，8MB，16MB，32MB。
+可以通过`-XX:G1HeapRegionsize`设定Region大小。所有的Region大小相同，且在JVM生命周期内不会被改变。
+
+虽然还保留有新生代和老年代的概念，但新生代和老年代不再是物理隔离的了，它们都是一部分Region（不需要连续）的集合。通过Region的动态分配方式实现逻辑上的连续。
+
+<img src="picture/1609586907889.png" alt="1609586907889" style="zoom:50%;" />
+
+一个region有可能属于Eden、Survivor或者Old/Tenured，但是一个region只能属于其中一个角色。
+
+G1垃圾收集器还增加了一种新的内存区域，叫做**Humongous内存区域**，主要用于存储大对象，如果超过1.5个region，就放到H。
+
+**设置H的原因：**
+对于堆中的对象，默认直接会被分配到老年代，但是如果它是一个短期存在的大对象就会对垃圾收集器造成负面影响。
+为了解决这个问题，G1划分了一个Humongous区，它用来专门存放大对象。如果一个H区装不下一个大对象，那么G1会寻找连续的H区来存储。为了能找到连续的H区，有时候不得不启动FullGC。**G1的大多数行为都把H区作为老年代的一部分来看待**。
+
+对于Regionl来说内存都是规整的，所以每个Region都是通过**指针碰撞**来分配空间。
+
+#### 4.5.8  G1垃圾回收器的回收过程
+
+G1GC的垃圾回收过程主要包括如下三个环节：
+
+1. 年轻代GC（Young GC）
+2. 老年代并发标记过程（Concurrent Marking）
+3. 混合回收（Mixed GC）
+
+如果需要单线程、独占式、高强度的FullGC还是继续存在的。它针对GC的评估失败提供了一种失败保护机制，即强力回收。
+
+<img src="picture/image-20210106131908629.png" alt="image-20210106131908629" style="zoom:70%;" />
+
+顺时针，Young GC -> Young GC+Concurrent Mark -> Mixed GC顺序，进行垃圾回收。
+
+1. 应用程序分配内存，当年轻代的Eden区用尽时开始年轻代回收过程；
+    **G1的年轻代收集阶段是一个并行的独占式收集器**。在年轻代回收期，G1GC暂停所有应用程序线程，启动多线程执行年轻代回收。然后从年轻代区间移动存活对象到Survivor区间或者老年区间，也有可能是两个区间都会涉及。
+2. 当堆内存使用达到一定值（默认45%）时，开始**老年代并发标记过程**。
+3. 标记完成马上开始**混合回收过程**。
+    对于一个混合回收期，G1GC从老年区间移动存活对象到空闲区间，这些空闲区间也就成为了老年代的一部分。和年轻代不同，老年代的G1回收器和其他GC不同，G1的老年代回收器不需要整个老年代被回收，一次只需要扫描/回收一小部分老年代的Region就可以了。同时，这个老年代Region是和年轻代一起被回收的。
+
+举个例子：
+一个Web服务器，Java进程最大堆内存为4G，每分钟响应1500个请求，每45秒钟会新分配大约2G的内存。G1会每45秒钟进行一次年轻代回收，每31个小时整个堆的使用率会达到45%，会开始老年代并发标记过程，标记完成后开始四到五次的混合回收。
+
+
+
+
+
+
 
 
 
