--- a/02-后端相关/Jvm/12-垃圾回收算法.md
+++ b/02-后端相关/Jvm/12-垃圾回收算法.md
@@ -260,7 +260,7 @@ public class CanReliveObj {
 
 在Java程序运行的过程中，会产生大量的对象，其中有些对象是与业务信息相关，比如Http请求中的Session对象、线程、Socket连接，这类对象跟业务直接挂钩，因此生命周期比较长。但是还有一些对象，主要是程序运行过程中生成的临时变量，这些对象生命周期会比较短，比如：string对象，由于其不变类的特性，系统会产生大量的这些对象，有些对象甚至只用一次即可回收。
 
-目前几乎所有的GC都采用分代手机算法执行垃圾回收的。
+目前几乎所有的GC都采用分代收集算法执行垃圾回收的。
 
 在HotSpot中，基于分代的概念，GC所使用的内存回收算法必须结合年轻代和老年代各自的特点。
 
@@ -295,9 +295,10 @@ public class CanReliveObj {
 
 ### 5.2 分区算法
 
-一般来说，在相同条件下，堆空间越大，一次Gc时所需要的时间就越长，有关GC产生的停顿也越长。为了更好地控制GC产生的停顿时间，将一块大的内存区域分割成多个小块，根据目标的停顿时间，每次合理地回收若干个小区间，而不是整个堆空间，从而减少一次GC所产生的停顿。
+一般来说，在相同条件下，堆空间越大，一次GC所需要的时间就越长，GC产生的停顿也就越长。为了更好地控制GC产生的停顿时间，分区算法将一块大的内存区域分割成多个小块，根据目标的停顿时间，每次合理地回收若干个小区间，而不是整个堆空间，从而减少一次GC所产生的停顿。
 
-分代算法将按照对象的生命周期长短划分成两个部分，分区算法将整个堆空间划分成连续的不同小区间。 每一个小区间都独立使用，独立回收。这种算法的好处是可以控制一次回收多少个小区间。
+分代算法将按照对象的生命周期长短划分成两个部分，分区算法将整个堆空间划分成连续的不同小区间， 每一个小区间都独立使用，独立回收。
+这种算法的好处是可以控制一次回收多少个小区间。
 
 <img src="picture/1609586907889.png" alt="1609586907889" style="zoom:50%;" />
 
