--- a/02-后端相关/Java/多线程/03-多线程实现方式.md
+++ b/02-后端相关/Java/多线程/03-多线程实现方式.md
@@ -128,7 +128,11 @@ public class ImplsRunnable implements Runnable {
 3. 增加程序的健壮性，代码可以被多个线程共享，代码和数据独立
 4. 线程池只能放入实现Runable或callable类线程，不能直接放入继承Thread的类
 
-## 3 
+## 3 实现Callable接口
+
+
+
+
 
 
 
