--- a/02-后端相关/Java/多线程/03-多线程实现方式.md
+++ b/02-后端相关/Java/多线程/03-多线程实现方式.md
@@ -12,21 +12,16 @@
 package com.hong.concurrent;
 
 /**
- * @author hongzh.zhang on 2021/01/17
- *
+ * @author create by hongzh.zhang on 2021-01-27
+ * 多线程初试
+ * 使用继承Thread类的形式实现多线程
+ * 各自打印0到4
  */
-public class ThreadTest extends Thread {
-    public static void main(String[] args) {
-        Thread thread1 = new ThreadTest("A");
-        Thread thread2 = new ThreadTest("B");
-
-        thread1.start();
-        thread2.start();
-    }
+public class T01ThreadTest extends Thread {
 
     private String name;
 
-    public ThreadTest(String name) {
+    public T01ThreadTest(String name) {
         this.name = name;
     }
 
@@ -40,26 +35,34 @@ public class ThreadTest extends Thread {
             }
         }
     }
-}
 
+    public static void main(String[] args) {
+        Thread thread1 = new T01ThreadTest("A");
+        Thread thread2 = new T01ThreadTest("B");
+
+        thread1.start();
+        thread2.start();
+    }
+
+}
 ```
 
 运行结果：
 
 ```java
-A运行  :  0
-B运行  :  0
-A运行  :  1
-B运行  :  1
-A运行  :  2
-B运行  :  2
-A运行  :  3
-A运行  :  4
-B运行  :  3
-B运行  :  4
+B运行  :java  0
+A运行  :java  0
+B运行  :java  1
+B运行  :java  2
+B运行  :java  3
+B运行  :java  4
+A运行  :java  1
+A运行  :java  2
+A运行  :java  3
+A运行  :java  4
 ```
 
-程序启动运行main时候，java虚拟机启动一个进程，主线程在main()调用时候被创建。随着调用thread1的两个对象的start方法，另外两个线程也启动了，这样，整个应用就在多线程下运行。
+程序启动运行main时候，java虚拟机启动一个进程，主线程在main()调用时候被创建。随着调用thread1的两个对象的start方法，另外两个线程也启动了，这样整个应用就在多线程下运行。
 
 start()方法的调用后并不是立即执行多线程代码，而是使得该线程变为可运行态（Runnable），什么时候运行是由操作系统决定的。
 
@@ -86,37 +89,40 @@ Thread.sleep()方法调用目的是不让当前线程独自霸占该进程所获
 ### 2.1 代码实现
 
 ```java
-public class ImplsRunnable implements Runnable {
+package com.hong.concurrent;
 
-	Logger log = LoggerFactory.getLogger(ImplsRunnable.class);
+import static java.lang.Thread.sleep;
 
-	public static void main(String[] args) {
-		Thread thread1 = new Thread(new ImplsRunnable("C"));
-		Thread thread2 = new Thread(new ImplsRunnable("D"));
+/**
+ * @author create by hongzh.zhang on 2021-01-27
+ * 多线程初试
+ * 使用实现Runnable接口的形式实现多线程
+ * 各自打印0到4
+ */
+public class T02RunnableTest implements Runnable {
 
-		thread1.start();
-		thread2.start();
-	}
+    @Override
+    public void run() {
+        for (int i = 0; i < 5; i++) {
+            System.out.println( Thread.currentThread().getName() + "运行  :java  " + i);
+            try {
+                sleep((int) Math.random() * 10);
+            } catch (InterruptedException e) {
+                e.printStackTrace();
+            }
+        }
+    }
 
-	private String name;
-
-	public ImplsRunnable(String name) {
-		this.name = name;
-	}
-
-
-	@Override
-	public void run() {
-		for (int i = 0; i < 5; i++) {
-			System.out.println(name + "运行  :  " + i);
-			try {
-				Thread.sleep((int) Math.random() * 10);
-			} catch (InterruptedException e) {
-				log.error("错误", e.getMessage());
-			}
-		}
-	}
+    public static void main(String[] args) {
+        Thread thread1 = new Thread(new T02RunnableTest());
+        thread1.setName("A");
+        Thread thread2 = new Thread(new T02RunnableTest());
+        thread2.setName("B");
+        thread1.start();
+        thread2.start();
+    }
 }
+
 ```
 
 ### 2.2 实现Runnable接口的优势
@@ -126,7 +132,7 @@ public class ImplsRunnable implements Runnable {
 1. 适合多个相同的程序代码的线程去处理同一个资源
 2. 可以避免java中的单继承的限制
 3. 增加程序的健壮性，代码可以被多个线程共享，代码和数据独立
-4. 线程池只能放入实现Runable或callable类线程，不能直接放入继承Thread的类
+4. 线程池只能放入实现Runable或Callable类线程，不能直接放入继承Thread的类
 
 ## 3 实现Callable接口
 
