--- a/02-后端相关/Java/多线程/04-线程的同步.md
+++ b/02-后端相关/Java/多线程/04-线程的同步.md
@@ -200,7 +200,7 @@ public class T04ThreadSyncMethod extends Thread {
 }
 ```
 
-#### 2.2.2 同步方法--实现Runnable接口
+#### 2.2.2 同步方法-实现Runnable接口
 
 ```java
 package com.hong.concurrent;
