--- a/02-后端相关/Java/多线程/04-线程的同步.md
+++ b/02-后端相关/Java/多线程/04-线程的同步.md
@@ -261,13 +261,82 @@ public class T06RunnableSyncMethod implements Runnable {
 
 ### 2.3 使用锁
 
+从JDK 5.0开始， Java提供了更强大的线程同步机制—通过显式定义同步锁对象来实现同步，同步锁使用Lock对象充当。
+
+java.util.concurrent.locks.Lock按口是控制多个线程对共享资源进行访问的工具，锁提供了对其享资源的独占访问，每次只能有一个线程对Lock对象加锁，线程开始访问共享资源之前应先获得Lock对象。
+
+ReentrantLock类实现了Lock，它拥有与synchronized相同的并发性和内存语义，在实现线程安全的控制中，比较常用的是ReentrantLock，可以显式加锁、释放锁。
+
+```java
+package com.hong.concurrent;
+
+import java.util.concurrent.locks.Lock;
+import java.util.concurrent.locks.ReentrantLock;
+
+import static java.lang.Thread.sleep;
+
+/**
+ * @author hongzh.zhang on 2021/01/30
+ * 解决线程安全的方式3-Lock的方式
+ */
+public class T07LockTest implements Runnable {
+
+    private int ticket = 100;
 
 
+    // 创建一个公平的锁
+    private Lock lock = new ReentrantLock(true);
 
+    @Override
+    public void run() {
+        while (ticket>0) {
+            try {
+                sleep(10);
+            } catch (InterruptedException e) {
+                e.printStackTrace();
+            }
 
+            try {
+                lock.lock(); // 开启锁
+                if (ticket>0) {
+                    ticket--;
+                    System.out.println(Thread.currentThread().getName() + "卖出1张票，剩余票量：" + ticket);
+                }
+            } finally {
+                lock.unlock(); // 解锁
+            }
 
+        }
+    }
 
+    public static void main(String[] args) {
+        T07LockTest t07LockTest = new T07LockTest();
 
+        Thread window1 = new Thread(t07LockTest);
+        Thread window2 = new Thread(t07LockTest);
+
+        window1.setName("A");
+        window2.setName("B");
+
+        window1.start();
+        window2.start();
+    }
+}
+
+```
+
+## 3 synchronized和lock的异同
+
+-  相同：二者都可以解决线程安全问题 
+-  不同： 
+    - synchronized机制在执行完相应的同步代码以后，自动的释放同步监视器
+    -  Lock需要手动的启动同步lock() ，同时结束同步也需要手动的实现unlock() 
+    - Lock只有代码块锁，synchronized有代码块锁和方法锁。
+
+使用Lock锁JVM将花费较少的时间来调度线程，性能更好，具有更好的扩展性。
+
+优先使用顺序：
+Lock -> 同步代码块 -> 同步方法
 
 
 
