--- a/02-后端相关/Java/多线程/03-多线程实现方式.md
+++ b/02-后端相关/Java/多线程/03-多线程实现方式.md
@@ -136,6 +136,143 @@ public class T02RunnableTest implements Runnable {
 
 ## 3 实现Callable接口
 
+### 3.1 Callable和实现Runnabled对比
+
+1. 相比run()，可以有返回值
+2. 方法可以抛出异常
+3. 支持泛型的返回值
+4. 需要借助FutureTask类，比如获取返回结果
+
+### 3.2 Future接口
+
+1. 可以对具体Runnable、Callable任务的执行结果进行取消、查询是否完成、获取结果等。
+2. FutureTask是Future接口的唯一实现类
+3. FutureTask同时实现了Runnable，Futrue接口，它既可以作为Runnable被线程执行，又可以作为Futrue得到Callable的返回值。
+
+```java
+package com.hong.concurrent;
+
+import java.util.concurrent.Callable;
+import java.util.concurrent.ExecutionException;
+import java.util.concurrent.FutureTask;
+
+/**
+ * @author hongzh.zhang on 2021/01/30
+ * 创建线程的方式3：实现Callable接口
+ * Callable可以有返回值，需要通过FutureTask来承接
+ * 对0到100间的偶数进行求和，返回结果
+ */
+public class T10CallableTest implements Callable {
+    @Override
+    public Object call() {
+        int sum=0;
+        for (int i = 0; i <= 100; i++) {
+            if (i % 2 == 0) {
+                System.out.println(i);
+                sum += i;
+            }
+        }
+        return sum;
+    }
+
+    public static void main(String[] args) {
+        T10CallableTest t10CallableTest = new T10CallableTest();
+
+        // 使用FutureTask获取线程的返回值
+        FutureTask futureTask = new FutureTask(t10CallableTest);
+
+        Thread thread = new Thread(futureTask);
+        thread.start();
+
+        try {
+            // get()返回值即为FutureTask的构造器参数Callable实现类中重写call()的返回值
+            Object sum = futureTask.get();
+            System.out.println("total sum : " + sum);
+        } catch (InterruptedException e) {
+            e.printStackTrace();
+        } catch (ExecutionException e) {
+            e.printStackTrace();
+        }
+    }
+}
+
+```
+
+## 4 使用线程池的方式
+
+### 4.1 介绍&优点
+
+背景：经常创建和销毁、使用量特别大的资源，比如并发情况下的线程，对性能影响很大。
+
+思路：提前创建好多个线程，放入线程池中，使用时直接获取，使用完放回池中，可以避免频繁创建销毁、实现重复利用。
+
+好处：
+
+1. 提高响应速度（减少了创建新线程的时间）
+2. 降低源消耗（重复利用线程池中线程，不需要每次都创）
+3. 便于线程管理
+    - corePoolSize：核心池的大小
+    - maximumPoolSize：最大线程数
+    - keepAliveTime：线程没有任务时最多保持多长时间后会终止
+
+JDK 5.0起提供了线程池相关API： ExecutorService和Executors
+
+ExecutorService：真正的线程池接口，常见子类ThreadPoolExecutor。
+
+- void execute（Runnable command） ：执行任务/命令，没有返回值，一般用来执行Runnable
+- <T>Futrue<T>submit(Callable<T> task)：执行任务，有返回值，一般用来执行Callable
+- void shutdown（）：关闭连接池
+
+Executors： 工具类、线程池的工厂类，用于创建并返回不同类型的线程池
+
+- Executors.newCachedThreadPool():创建一个可根据需要创建新线程的线程池
+- Executors.newFixedThreadPool(n):创建一个可重用固定线程数的线程池
+- Executors.newSingleThreadExecutor(） ：创建一个只有一个线程的线程池
+- Executors.newScheduledThreadPool(n)：创建一个线程池，它可安排在给定延迟后运行命令或者定期地执行。
+
+### 4.2 代码实现
+
+```java
+package com.hong.concurrent;
+
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
+
+/**
+ * @author hongzh.zhang on 2021/01/30
+ * 使用线程池的方式创建线程
+ */
+public class T11ThreadPoolTest {
+
+
+    public static void main(String[] args) {
+        // 提供指定线程数量的线程池
+        ExecutorService service = Executors.newFixedThreadPool(10);
+
+        // 执行指定线程的操作
+        service.execute(new NumberThread());// 适合于Runnable
+//        service.submit(Callable callable);// 适合于Callable
+
+        // 关闭线程池
+        service.shutdown();
+    }
+}
+
+class NumberThread implements Runnable {
+    @Override
+    public void run() {
+        for (int i = 0; i <= 100; i++) {
+            if (i % 2 == 0) {
+                System.out.println(i);
+            }
+        }
+    }
+}
+
+```
+
+
+
 
 
 
