--- a/04-大数据/需要提高的点.md
+++ b/04-大数据/需要提高的点.md
@@ -1,14 +1,15 @@
+框架
+
+- Redis
+- Flink，Flume
+- Spark
+
 java相关
 
-- 多线程
 - 线程池
 - hashMap原理7&8
-- hashMap&hashTable
 
+算法相关
 
+- 常见的排序算法以及代码实现
 
-kafka
-
-
-
-排序
