--- a/02-后端相关/Jvm/11-垃圾回收概述.md
+++ b/02-后端相关/Jvm/11-垃圾回收概述.md
@@ -382,9 +382,7 @@ obj = null; //销毁强引用，这是必须的，不然会存在强引用和软
 
 但是，由于垃圾回收器的线程通常优先级很低，因此，并不一定能很快地发现持有弱引用的对象。在这种情况下，弱引用对象可以存在较长的时间。
 
-弱引用和软引用一样，在构造弱引用时，也**可以指定一个引用队列**，**当弱引用对象被回收时，就会加入指定的引用队列，通过这个队列可以跟踪对象的回收情况。**（NIO的应用场景）
-
-- 弱引用在NIO的应用点：在NIO中，弱引用关联堆外内存，当弱引用被回收时就会放入指定的队列，我们根据队列里的数据就可以知道哪些堆外内存需要回收了。
+弱引用和软引用一样，在构造弱引用时，也**可以指定一个引用队列**，**当弱引用对象被回收时，就会加入指定的引用队列，通过这个队列可以跟踪对象的回收情况。
 
 软引用、弱引用都非常适合来保存那些可有可无的缓存数据。如果这么做，当系统内存不足时，这些缓存数据会被回收，不会导致内存溢出。而当内存资源充足时，这些缓存数据又可以存在相当长的时间，从而起到加速系统的作用。
 
@@ -414,7 +412,9 @@ obj = null; //销毁强引用，这是必须的，不然会存在强引用和弱
 
 **为一个对象设置虚引用关联的唯一目的在于跟踪垃圾回收过程。**比如：能在这个对象被收集器回收时收到一个系统通知。
 
-虚引用必须和引用队列一起使用。虚引用在创建时必须提供一个引用队列作为参数。当垃圾回收器准备回收一个对象时，如果发现它还有虚引用，就会在回收对象后，将这个虚引用加入引用队列，以通知应用程序对象的回收情况。
+**虚引用必须和引用队列一起使用**。
+
+- 虚引用在创建时必须提供一个引用队列作为参数。当垃圾回收器准备回收一个对象时，如果发现它还有虚引用，就会在回收对象后，将这个虚引用加入引用队列，以通知应用程序对象的回收情况。
 
 由于虚引用可以跟踪对象的回收时间，因此，也可以将一些资源释放操作放置在虚引用中执行和记录。
 
@@ -431,6 +431,8 @@ ReferenceQueue phantomQueue = new ReferenceQueue();
 PhantomReference<Object> sf = new PhantomReference<>(obj, phantomQueue);
 obj = null; 
 ```
+
+- 虚引用在NIO的应用点：在NIO中，虚引用关联堆外内存，当虚引用被回收时就会放入指定的队列，我们根据队列里的数据就可以知道哪些堆外内存需要回收了。
 
 ### 11.4 终结器引用
 
