--- a/需要提高的点.md
+++ b/需要提高的点.md
@@ -1,21 +1,32 @@
-框架
+[toc]
+
+## 框架
 
 - Redis
-- Flink，Flume
+- Flink
+- Flume
 - Spark
-- netty
+- Netty
+- EleasticSearch
 
-Java相关
+## Java相关
 
 - 线程池
 - hashMap原理7&8
 
-算法相关
+## 算法相关
 
 - 常见的排序算法以及代码实现
+- 红黑数、B+树
 
-mysql相关
+## mysql相关
 
 - 底层原理
 - 优化
+
+## web相关
+
+- springboot
+- springclound
+- dubbo
 
