--- a/04-大数据/11-Redis/12-布隆过滤器.md
+++ b/04-大数据/11-Redis/12-布隆过滤器.md
@@ -4,7 +4,8 @@
 
 ## 1 什么是布隆过滤器
 
-本质上布隆过滤器是一种比较巧妙的概率型数据结构（probabilistic data structure），特点是高效地插入和查询，可以用来告诉你 **“某样东西一定不存在或者可能存在”**。 	
+本质上布隆过滤器是一种比较巧妙的概率型数据结构（probabilistic data structure），
+特点是高效地插入和查询，可以用来告诉你 **“某样东西一定不存在或者可能存在”**。 	
 
 相比于传统的 List、Set、Map 等数据结构，它更高效、占用空间更少，但是缺点是其返回的结果是概率性的，而不是确切的。 	
 
