--- a/需要提高的点.md
+++ b/需要提高的点.md
@@ -2,21 +2,27 @@
 
 ## 框架
 
-- Redis
 - Flink
 - Flume
 - Spark
 - Netty
 - EleasticSearch
+- kyline
 
 ## Java相关
 
 - 线程池
+    - 原理
+    - 常用参数
+    - 拒接策略
+    - <img src="picture/1615687874958.png" alt="1615687874958" style="zoom:50%;" />
 - hashMap原理7&8
+- 锁-AQS
+- 锁-读写锁
 
 ## 算法相关
 
-- 常见的排序算法以及代码实现
+- 常见的排序算法以及代码实现-[数据结构可视化](https://visualgo.net/en)
 - 红黑数、B+树
 - 布隆过滤器
 
@@ -26,6 +32,10 @@
 - 优化
 - 分库分表实现
 - mysql主从复制原理
+- 存储引擎，innodb myisam
+- b树，b+树
+- 索引相关
+- 索引失效的场景
 
 ## web相关
 
