--- a/02-后端相关/数据库相关/01-数据库知识/数据库学习-范式.md
+++ b/02-后端相关/数据库相关/01-数据库知识/数据库学习-范式.md
@@ -10,8 +10,6 @@
 
 第二范式是在第一范式的基础上，第三范式是在第二范式的基础上，依次递推。
 
-
-
 ## 1 基础知识
 
 - 实体：现实世界中客观存在的事物的抽象。
@@ -23,8 +21,6 @@
 - 外码：一个属性不是码，但它是其他表的码，那么它在这张表就叫外码。
 - 主属性：候选码中的一个元素（主属性⊆候选码）。
 - 非主属性：一张表中不是主属性的属性的集合。
-
-
 
 ## 2 不好的设计
 
@@ -74,23 +70,19 @@
 
 当这个班级的学生毕业了，在删除这个班的学生信息时，同时也把班主任删掉了。
 
-
-
 ## 3 第一范式（1NF——不可再分）
 
 数据表中的每一列数据都是不可分割的。
 
 <font color="red">第一范式反例</font>：
 
-![](https://github.com/RunningHong/LearnNotes/blob/master/picture/%E7%AC%AC%E4%B8%80%E8%8C%83%E5%BC%8F%E5%8F%8D%E4%BE%8B.png?raw=true)
+![](../../../picture/%E7%AC%AC%E4%B8%80%E8%8C%83%E5%BC%8F%E5%8F%8D%E4%BE%8B.png?raw=true)
 
 即一个属性可以继续再分。
 
 **第一范式正例**：
 
 学生表（<font color="blue">学号</font>，姓名，家庭电话，移动电话）
-
-
 
 ## 4 第二范式（2NF——无部分依赖）
 
@@ -116,8 +108,6 @@
 
 - **课程表**（<font color="blue">课程号</font>，课程名）
 
-
-
 ## 5 第三范式（3NF——无传递依赖）
 
 定义：在满足第二范式的基础上，没有传递依赖。
@@ -139,11 +129,7 @@
 - **系    表**（<font color="blue">系号</font>，系名称）
 - 学生-系中间表（<font color="blue">ID</font>，学号，系号）
 
-
-
 <font color="red">符合3NF要求的数据库设计，基本上解决了**数据冗余过大**，**插入异常**，**更新异常**，**删除异常**的问题。</font>
-
-
 
 ## 6 巴斯-科德范式（BCNF）
 
@@ -154,8 +140,6 @@ BCNF与[第三范式](https://zh.wikipedia.org/wiki/%E7%AC%AC%E4%B8%89%E8%8C%83%
 - 所有非主属性都完全函数依赖于每个候选键
 - 所有主属性都完全函数依赖于每个不包含它的候选键
 - 没有任何属性完全函数依赖于非候选键的任何一组属性
-
-
 
 **总结**：
 
