--- a/02-后端相关/算法/数组排序.md
+++ b/02-后端相关/算法/数组排序.md
@@ -2,7 +2,7 @@
 
 # 	排序相关
 
-![算法时间复杂度稳定性综合](https://github.com/RunningHong/LearnNotes/blob/master/picture/%E7%AE%97%E6%B3%95%E6%97%B6%E9%97%B4%E5%A4%8D%E6%9D%82%E5%BA%A6%E7%A8%B3%E5%AE%9A%E6%80%A7%E7%BB%BC%E5%90%88.png?raw=true)
+![算法时间复杂度稳定性综合](../../picture/%E7%AE%97%E6%B3%95%E6%97%B6%E9%97%B4%E5%A4%8D%E6%9D%82%E5%BA%A6%E7%A8%B3%E5%AE%9A%E6%80%A7%E7%BB%BC%E5%90%88.png?raw=true)
 
 **稳定性**：通俗地讲就是能保证排序前两个相等的数据其在序列中的先后位置顺序与排序后它们两个先后位置顺序相同。
 
@@ -165,7 +165,7 @@
 	}
 ```
 
-![img](https://github.com/RunningHong/LearnNotes/blob/master/picture/selectionSort.png?raw=true)
+![img](../../picture/selectionSort.png?raw=true)
 
 ### 3.2 希尔排序
 
@@ -283,7 +283,7 @@
 
 
 
-	
+​	
 
 
 
