--- a/02-后端相关/设计模式/设计模式学习笔记3-代理模式.md
+++ b/02-后端相关/设计模式/设计模式学习笔记3-代理模式.md
@@ -8,7 +8,7 @@
 
 **代理模式uml**
 
-![代理模式](https://github.com/RunningHong/LearnNotes/blob/master/picture/%E4%BB%A3%E7%90%86%E6%A8%A1%E5%BC%8F.png?raw=true)
+![代理模式](../../picture/%E4%BB%A3%E7%90%86%E6%A8%A1%E5%BC%8F.png?raw=true)
 
 ## 1 静态代理的实现
 
@@ -92,8 +92,6 @@ public class StaticProxyTest {
 我正在吃饭
 在方法【后】干了一系列事情。。。
 ```
-
-
 
 <font color=red>静态代理的优缺点：</font>
 
@@ -225,8 +223,6 @@ public class DynamicProxyTest {
 在方法【后】干了一系列事情。。。
 ```
 
-
-
 **不惑解答**
 
 写完这些你可能就要问了，这动态代理和静态代理的想要的结果都一样，那为什么我们要使用动态代理而不用静态代理呢？（明明动态代理写起来更麻烦）。在这里我来说明一下，在业务少的时候我们使用静态代理其实比使用动态代理更快，但是当我们业务量大的时候，就如我在**静态代理的缺点分析**中说到的一样，我们使用静态代理需要创建大量的代理类（增加了jvm类加载的负担，使系统更加臃肿），这时我们就使用动态代理（当然业务类需要实现相应的接口），**动态代理就是根据业务类实现的接口，让代理类实现了相应的接口**，在运行时采用反射技术动态生成一个代理对象（减少我们写代理类的负担），在调用方法的业务方法的时候只需要进行一个强制的转换，就好了。
@@ -238,15 +234,11 @@ HandleInterface handleProxy = (HandleInterface)Proxy.newProxyInstance(
 				handler);
 ```
 
-
-
 <font color="red">动态代理的优缺点分析</font>
 
 优点：相对于静态代理不用写很多的代理类，代理类都是在运行时jvm通过反射动态生成的，只需让业务类实现相应的接口，在使用的时候进行强制转化，调用代理类的业务方法，就可达到目的。
 
 缺点：写起来相对的复杂。
-
-
 
 ## 3 代理模式的应用场景
 
