--- a/02-后端相关/算法/拓扑排序.md
+++ b/02-后端相关/算法/拓扑排序.md
@@ -11,11 +11,11 @@
 
 如图就可以进行拓扑排序：
 
-![拓扑排序示例](https://github.com/RunningHong/LearnNotes/blob/master/picture/%E6%8B%93%E6%89%91%E6%8E%92%E5%BA%8F%E7%A4%BA%E4%BE%8B.png?raw=true)
+![拓扑排序示例](../../picture/%E6%8B%93%E6%89%91%E6%8E%92%E5%BA%8F%E7%A4%BA%E4%BE%8B.png?raw=true)
 
 ## 2 进行排序
 
-![拓扑排序分步](https://github.com/RunningHong/LearnNotes/blob/master/picture/%E6%8B%93%E6%89%91%E6%8E%92%E5%BA%8F%E5%88%86%E6%AD%A5.png?raw=true)
+![拓扑排序分步](../../picture/%E6%8B%93%E6%89%91%E6%8E%92%E5%BA%8F%E5%88%86%E6%AD%A5.png?raw=true)
 
 排序序列：1 ，2， 4， 3， 5
 
