--- a/需要提高的点.md
+++ b/需要提高的点.md
@@ -25,6 +25,7 @@
 - 常见的排序算法以及代码实现-[数据结构可视化](https://visualgo.net/en)
 - 红黑数、B+树
 - 布隆过滤器
+- 数据结构-跳表-[跳表](https://mp.weixin.qq.com/s?__biz=Mzk0MDIxNjU3OA==&mid=2247485981&idx=1&sn=9089a5df026c4103bbb73c0b94300399&chksm=c2e45270f593db66d47ca30dc5c86e024bed9864e1f35990f625bb6a9e591ba38039ba674346&scene=132#wechat_redirect)
 
 ## mysql相关
 
