--- a/03-Web学习/06-Spring/04-全局异常处理.md
+++ b/03-Web学习/06-Spring/04-全局异常处理.md
@@ -1,3 +1,5 @@
+[toc]
+
 # 实现全局异常处理
 
 使用Spring的@ControllerAdvice以及 @ExceptionHandler实现全局异常处理。
@@ -95,7 +97,7 @@ public class ExceptionHandlerAdvice {
 
 handleException通过`@ExceptionHandler(value = Exception.class)`修饰可以捕获这些异常（当然这里可以自定义异常），`@ResponseBody`可以使返回的类型被json化（前提是需要引入jackson这类的包）。
 
-## 原理
+## 3 原理
 
 关于Advice，在Spring Aop中其是用于封装一个切面所有属性的，包括**切入点**和需要**织入的切面逻辑**。这里ContrllerAdvice也可以这么理解，其抽象级别应该是用于**对Controller进行“切面”环绕的**，而具体的业务织入方式则是通过结合其他的注解来实现的。@ControllerAdvice是在类上声明的注解，其用法主要有三点：
 
